--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<h1 style="color:blue">สวัสดีชาว สพท.</h1>
-<h2>ฉันกำลังเรียนเขียนโค้ด</h2>
+<h1 style="color:#008000">สวัสดีชาว สพท.</h1>
+<h2 style="color:#ff0000">ฉันกำลังเรียนเขียนโค้ด</h2>
