--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <h1 style="color:#008000; background-color:powderblue">สวัสดีชาว สพท.</h1>
 <h2 style="color:#ff0000">ฉันกำลังเรียนเขียนโค้ด</h2>
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/70/Thammanat_Prompao_in_2568.jpg/250px-Thammanat_Prompao_in_2568.jpg" alt="มันคือแป้งหนิ">
