--- a/index.html
+++ b/index.html
@@ -1,4 +1,2 @@
-<h1 style="color:#008000; background-color:powderblue">สวัสดีชาว สพท.</h1>
+<h1 style="color:#008000; background-color:powderblue">สวัสดีชาว Coding</h1>
 <h2 style="color:#ff0000">ฉันกำลังเรียนเขียนโค้ด</h2>
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/70/Thammanat_Prompao_in_2568.jpg/250px-Thammanat_Prompao_in_2568.jpg" alt="มันคือแป้งหนิ">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/53E3hAZqa64?si=coIyds29WLz4WRoh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
