--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <h1 style="color:#008000; background-color:powderblue">สวัสดีชาว Coding</h1>
 <h2 style="color:#ff0000">ฉันกำลังเรียนเขียนโค้ด</h2>
+<a href="https://www.google.com">คลิกเพื่อเปิด Google</a>
