--- a/work.html
+++ b/work.html
@@ -1,3 +1,3 @@
 <h1>นี่คือหน้าแสดงผลงานของฉันนะ</h1>
 <a href="index.html">คลิกเพื่อ กลับไปหน้าหลัก</a> <br>
-<img src="sptlog.jpeg">
+<img src="sptlogo.jpeg">
