--- a/work.html
+++ b/work.html
@@ -1,3 +1,7 @@
 <h1>นี่คือหน้าแสดงผลงานของฉันนะ</h1>
 <a href="index.html">คลิกเพื่อ กลับไปหน้าหลัก</a> <br>
-<img src="sptlogo.jpeg" width="200px">
+
+<a href="https://www.spt.ac.th">
+  <img src="sptlogo.jpeg" width="200px">
+</a>
+
